alignment issue fixed

--- a/public/output.css
+++ b/public/output.css
@@ -639,6 +639,10 @@ video {
   width: 80%;
 }
 
+.w-\[100vw\] {
+  width: 100vw;
+}
+
 .basis-\[30\%\] {
   flex-basis: 30%;
 }
@@ -686,6 +690,11 @@ video {
   background-color: rgb(173 153 112 / var(--tw-bg-opacity));
 }
 
+.bg-grey {
+  --tw-bg-opacity: 1;
+  background-color: rgb(109 109 109 / var(--tw-bg-opacity));
+}
+
 .bg-\[url\(\'\.\/assets\/rode8\.png\'\)\] {
   background-image: url('./assets/rode8.png');
 }
@@ -720,6 +729,10 @@ video {
 
 .bg-cover {
   background-size: cover;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
 }
 
 .px-4 {
@@ -982,12 +995,48 @@ video {
     height: 3rem;
   }
 
+  .lg\:h-\[100vh\] {
+    height: 100vh;
+  }
+
+  .lg\:h-\[160vh\] {
+    height: 160vh;
+  }
+
+  .lg\:h-\[120vh\] {
+    height: 120vh;
+  }
+
+  .lg\:h-\[60vh\] {
+    height: 60vh;
+  }
+
+  .lg\:h-\[70vh\] {
+    height: 70vh;
+  }
+
+  .lg\:h-\[65vh\] {
+    height: 65vh;
+  }
+
+  .lg\:h-\[6vh\] {
+    height: 6vh;
+  }
+
+  .lg\:h-\[66vh\] {
+    height: 66vh;
+  }
+
   .lg\:w-\[30rem\] {
     width: 30rem;
   }
 
   .lg\:w-\[50rem\] {
     width: 50rem;
+  }
+
+  .lg\:w-\[100vw\] {
+    width: 100vw;
   }
 
   .lg\:items-center {
@@ -1018,8 +1067,16 @@ video {
     background-image: url('../assets/rode4.jpg');
   }
 
+  .lg\:bg-\[url\(\'\.\/assets\/rode3\.jpg\'\)\] {
+    background-image: url('./assets/rode3.jpg');
+  }
+
   .lg\:bg-cover {
     background-size: cover;
+  }
+
+  .lg\:bg-contain {
+    background-size: contain;
   }
 
   .lg\:bg-center {
@@ -1051,6 +1108,16 @@ video {
     padding-right: 1.5rem;
   }
 
+  .lg\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .lg\:py-12 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
   .lg\:pt-\[30vh\] {
     padding-top: 30vh;
   }
@@ -1061,6 +1128,18 @@ video {
 
   .lg\:pl-\[50vw\] {
     padding-left: 50vw;
+  }
+
+  .lg\:pt-8 {
+    padding-top: 2rem;
+  }
+
+  .lg\:pt-2 {
+    padding-top: 0.5rem;
+  }
+
+  .lg\:pt-\[10vh\] {
+    padding-top: 10vh;
   }
 
   .lg\:text-left {
